[package]
name = "parseit"
version = "0.1.1"
description = "Simple text file parsing library powered by regex and glob patterns"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/parseit"
repository = "https://github.com/orhun/parseit"
keywords = ["text", "parser", "regex", "glob"]
categories = ["parsing"]
include = ["Cargo.toml", "src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
edition = "2021"
rust-version = "1.56.1"

[features]
gzip = ["flate2"]

[dependencies]
regex = "1.5.5"
globwalk = "0.8.1"
thiserror = "1.0.29"
flate2 = { version = "1.0.22", optional = true }
